--- a/3Dprint design/readme
+++ b/3Dprint design/readme
@@ -1,1 +1,3 @@
-.
+ring_apparatus_square_final.stl – designed for the proximity sensor.
+ring_apparatus_circle_final.stl – compatible with the camera.
+ring_apparatus_cap_final.stl – fits both the square and circle types.
